@@ -3,8 +3,8 @@ package com.nukateam.nukacraft.common.foundation.world;
 import com.google.common.collect.ImmutableList;
 import com.nukateam.nukacraft.NukaCraftMod;
 import com.nukateam.nukacraft.common.foundation.world.treedecorator.*;
-import com.nukateam.nukacraft.common.registery.ModBlocks;
 import com.nukateam.nukacraft.common.registery.EntityTypes;
+import com.nukateam.nukacraft.common.registery.ModBlocks;
 import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.data.worldgen.BiomeDefaultFeatures;
 import net.minecraft.data.worldgen.features.FeatureUtils;
@@ -12,20 +12,16 @@ import net.minecraft.data.worldgen.features.VegetationFeatures;
 import net.minecraft.data.worldgen.placement.AquaticPlacements;
 import net.minecraft.data.worldgen.placement.PlacementUtils;
 import net.minecraft.util.valueproviders.ConstantInt;
-import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.MobCategory;
 import net.minecraft.world.level.biome.*;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.levelgen.GenerationStep;
 import net.minecraft.world.level.levelgen.feature.Feature;
 import net.minecraft.world.level.levelgen.feature.configurations.TreeConfiguration;
-import net.minecraft.world.level.levelgen.feature.featuresize.ThreeLayersFeatureSize;
 import net.minecraft.world.level.levelgen.feature.featuresize.TwoLayersFeatureSize;
 import net.minecraft.world.level.levelgen.feature.foliageplacers.AcaciaFoliagePlacer;
 import net.minecraft.world.level.levelgen.feature.foliageplacers.BlobFoliagePlacer;
-import net.minecraft.world.level.levelgen.feature.foliageplacers.DarkOakFoliagePlacer;
 import net.minecraft.world.level.levelgen.feature.stateproviders.BlockStateProvider;
-import net.minecraft.world.level.levelgen.feature.trunkplacers.DarkOakTrunkPlacer;
 import net.minecraft.world.level.levelgen.feature.trunkplacers.ForkingTrunkPlacer;
 import net.minecraft.world.level.levelgen.feature.trunkplacers.StraightTrunkPlacer;
 import net.minecraft.world.level.levelgen.placement.*;
@@ -90,60 +86,58 @@ public class ModBiomes {
         BiomeDefaultFeatures.addSurfaceFreezing(biomeGenerationSettings);
 
 
-
         return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).biomeCategory(Biome.BiomeCategory.NONE).temperature(0.5f)
                 .downfall(0.5f).specialEffects(effects).mobSpawnSettings(mobspawnsettings$builder.build()).generationSettings(biomeGenerationSettings.build())
                 .build();
     }
 
-    private static Biome createCranberryBog()
-        {
-            MobSpawnSettings.Builder mobspawnsettings$builder = new MobSpawnSettings.Builder();
-            mobspawnsettings$builder.addSpawn(MobCategory.CREATURE, new MobSpawnSettings.SpawnerData(EntityTypes.RADROACH.get(), 1, 1, 1));
-            mobspawnsettings$builder.addSpawn(MobCategory.CREATURE, new MobSpawnSettings.SpawnerData(EntityTypes.BLOATFLY.get(), 1, 1, 1));
-            mobspawnsettings$builder.addSpawn(MobCategory.CREATURE, new MobSpawnSettings.SpawnerData(EntityTypes.BRAHMIN.get(), 1, 1, 1));
-            BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
+    private static Biome createCranberryBog() {
+        MobSpawnSettings.Builder mobspawnsettings$builder = new MobSpawnSettings.Builder();
+        mobspawnsettings$builder.addSpawn(MobCategory.CREATURE, new MobSpawnSettings.SpawnerData(EntityTypes.RADROACH.get(), 1, 1, 1));
+        mobspawnsettings$builder.addSpawn(MobCategory.CREATURE, new MobSpawnSettings.SpawnerData(EntityTypes.BLOATFLY.get(), 1, 1, 1));
+        mobspawnsettings$builder.addSpawn(MobCategory.CREATURE, new MobSpawnSettings.SpawnerData(EntityTypes.BRAHMIN.get(), 1, 1, 1));
+        BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
 
-            biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register("nukacraft:tree_cranberry",
-                    FeatureUtils.register("nukacraft:cranberry_tree", Feature.TREE,
-                            new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ModBlocks.CRANBERRYWOOD.get().defaultBlockState()),
-                                    new ForkingTrunkPlacer(5, 2, 2), BlockStateProvider.simple(ModBlocks.CRANBERRYLEAVES.get().defaultBlockState()),
-                                    new AcaciaFoliagePlacer(ConstantInt.of(1), ConstantInt.of(0)),
-                                    new TwoLayersFeatureSize(1, 0, 1, OptionalInt.empty())).decorators(ImmutableList.of(new DewdropDecorator(0.4f), new DewdropDecorator(0.1f))).ignoreVines()
-                                    .build()),
-                    List.of(CountPlacement.of(1), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-                            PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
+        biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register("nukacraft:tree_cranberry",
+                FeatureUtils.register("nukacraft:cranberry_tree", Feature.TREE,
+                        new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ModBlocks.CRANBERRYWOOD.get().defaultBlockState()),
+                                new ForkingTrunkPlacer(5, 2, 2), BlockStateProvider.simple(ModBlocks.CRANBERRYLEAVES.get().defaultBlockState()),
+                                new AcaciaFoliagePlacer(ConstantInt.of(1), ConstantInt.of(0)),
+                                new TwoLayersFeatureSize(1, 0, 1, OptionalInt.empty())).decorators(ImmutableList.of(new DewdropDecorator(0.4f), new DewdropDecorator(0.1f))).ignoreVines()
+                                .build()),
+                List.of(CountPlacement.of(1), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
+                        PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 
 
-            biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-                    PlacementUtils.register("nukacraft:grass_ash", VegetationFeatures.PATCH_GRASS, List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4),
-                            InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
+        biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
+                PlacementUtils.register("nukacraft:grass_ash", VegetationFeatures.PATCH_GRASS, List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4),
+                        InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
 
-            biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-                    PlacementUtils.register("nukacraft:crangrass", ModFeatures.PATCH_CRANGRASS, List.of(NoiseThresholdCountPlacement.of(-0.3D, 1, 12),
-                            InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
+        biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
+                PlacementUtils.register("nukacraft:crangrass", ModFeatures.PATCH_CRANGRASS, List.of(NoiseThresholdCountPlacement.of(-0.3D, 1, 12),
+                        InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
 
-            ModDefaultFeatures.addCranBerryBogPlants(biomeGenerationSettings);
-            ModDefaultFeatures.addCranberryBogOres(biomeGenerationSettings);
+        ModDefaultFeatures.addCranBerryBogPlants(biomeGenerationSettings);
+        ModDefaultFeatures.addCranberryBogOres(biomeGenerationSettings);
 
-            BiomeDefaultFeatures.addFossilDecoration(biomeGenerationSettings);
-            BiomeDefaultFeatures.addSwampClayDisk(biomeGenerationSettings);
-            biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, AquaticPlacements.SEAGRASS_SWAMP);
-            return (new Biome.BiomeBuilder()).precipitation(Biome.Precipitation.RAIN)
-                    .biomeCategory(Biome.BiomeCategory.SWAMP)
-                    .temperature(0.8F)
-                    .downfall(0.9F)
-                    .specialEffects((new BiomeSpecialEffects.Builder())
-                            .waterColor(-11386816)
-                            .waterFogColor(-11590620)
-                            .fogColor(-10990522)
-                            .skyColor(-3024201)
-                            .foliageColorOverride(-6797754)
-                            .grassColorOverride(-7714230)
-                            .ambientMoodSound(AmbientMoodSettings.LEGACY_CAVE_SETTINGS)
-                            .build()).mobSpawnSettings(mobspawnsettings$builder.build())
-                    .generationSettings(biomeGenerationSettings.build()).build();
-        }
+        BiomeDefaultFeatures.addFossilDecoration(biomeGenerationSettings);
+        BiomeDefaultFeatures.addSwampClayDisk(biomeGenerationSettings);
+        biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, AquaticPlacements.SEAGRASS_SWAMP);
+        return (new Biome.BiomeBuilder()).precipitation(Biome.Precipitation.RAIN)
+                .biomeCategory(Biome.BiomeCategory.SWAMP)
+                .temperature(0.8F)
+                .downfall(0.9F)
+                .specialEffects((new BiomeSpecialEffects.Builder())
+                        .waterColor(-11386816)
+                        .waterFogColor(-11590620)
+                        .fogColor(-10990522)
+                        .skyColor(-3024201)
+                        .foliageColorOverride(-6797754)
+                        .grassColorOverride(-7714230)
+                        .ambientMoodSound(AmbientMoodSettings.LEGACY_CAVE_SETTINGS)
+                        .build()).mobSpawnSettings(mobspawnsettings$builder.build())
+                .generationSettings(biomeGenerationSettings.build()).build();
+    }
 
     private static Biome createGlowSea() {
         MobSpawnSettings.Builder mobspawnsettings$builder = new MobSpawnSettings.Builder();
